@@ -117,7 +117,7 @@
         </item>
         <item>
             <key> <string>id</string> </key>
-            <value> <string>Component_view</string> </value>
+            <value> <string>ComponentMixin_view</string> </value>
         </item>
         <item>
             <key> <string>method</string> </key>
